added a button to delete task

--- a/src/app/completed/completed.component.html
+++ b/src/app/completed/completed.component.html
@@ -1,7 +1,9 @@
 <div>
   <div *ngIf="loading">Recupero Task Completati...</div>
   <ul *ngIf="!loading">
-    <li *ngFor="let todo of completedList">- {{ todo.title }}</li>
+    <li *ngFor="let todo of completedList; let i = index">
+      - {{ todo.title }} <span (click)="onDeleteTask(todo, i)">❌</span>
+    </li>
   </ul>
   <div *ngIf="!loading && completedList.length === 0">
     Non ci sono task completati.
