--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,9 +1,10 @@
 <div class="verticalRow">
   <div *ngIf="loading">Recupero Task...</div>
   <ul *ngIf="!loading" class="listTask">
-    <li *ngFor="let todo of todoList">
+    <li *ngFor="let todo of todoList; let i = index">
       - {{ todo.title }}
       <span (click)="CompleteTaskClick(todo)">✅</span>
+      <span (click)="onDeleteTask(todo, i)">❌</span>
     </li>
   </ul>
   <div *ngIf="!loading && todoList.length === 0" class="noTask">
