fixed height to put the task display in the center

--- a/src/app/completed/completed.component.html
+++ b/src/app/completed/completed.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="verticalRow">
   <div *ngIf="loading">Recupero Task Completati...</div>
   <ul *ngIf="!loading">
     <li *ngFor="let todo of completedList; let i = index">
