--- a/src/app/completed/completed.component.scss
+++ b/src/app/completed/completed.component.scss
@@ -9,3 +9,11 @@ ul {
 span:hover {
   cursor: pointer;
 }
+
+.verticalRow {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - 90px);
+}
