--- a/src/app/todo/todo.component.scss
+++ b/src/app/todo/todo.component.scss
@@ -6,6 +6,8 @@ span:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: calc(100vh - 90px);
 }
 
 .listTask {
